--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,8 +12,7 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-
-
+//$background-color: #f4f4ff;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -29,8 +28,8 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222, 
-  purple: 	  #4B0082
+  dark:       #222,
+  purple: 	  #778899
 );
 
 
