"final version of the weather App with a full functionnality of social sharing"

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -35,6 +35,7 @@
     }
     .back {
       background-image: url('../../assets/img/world.jpg');
+      background-image: url('http://www.world-of-swiss.com/img/routenetwork/map-zoom-world.jpg?1475577663');
       -webkit-background-image: url('../../assets/img/world.jpg');
       background-size: cover;
       background-repeat: no-repeat;
@@ -47,6 +48,6 @@
       margin: 18px 0;
       position: relative;
     }
- 
+
  }
-  
+
