--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,7 +12,7 @@ $font-path: "../assets/fonts";
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/v2/theming/overriding-ionic-variables/
 
-//$background-color: #f4f4ff;
+$background-color: #f4f4ff;
 
 // Named Color Variables
 // --------------------------------------------------
